Add GraalVM native image build profile